Set.of(a) throws an exception if there a duplicate element in array a. Use workaround to fix issue